docs/envoy/v1.25.1/_sources/intro/arch_overview/security/external_dep_observability_ext.rst.txt
External dependencies: ``observability_ext``
============================================


envoy.filters.http.aws_lambda
-----------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `curl <https://curl.haxx.se>`__, `7.87.0 <https://github.com/curl/curl/releases/tag/curl-7_87_0>`__, 2022-12-21, `cpe:2.3:a:haxx:libcurl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ahaxx%3Alibcurl%3A%2A&search_type=all>`__, `curl <https://github.com/curl/curl/blob/curl-7_87_0/COPYING>`__


envoy.filters.http.aws_request_signing
--------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `curl <https://curl.haxx.se>`__, `7.87.0 <https://github.com/curl/curl/releases/tag/curl-7_87_0>`__, 2022-12-21, `cpe:2.3:a:haxx:libcurl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ahaxx%3Alibcurl%3A%2A&search_type=all>`__, `curl <https://github.com/curl/curl/blob/curl-7_87_0/COPYING>`__


envoy.grpc_credentials.aws_iam
------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `curl <https://curl.haxx.se>`__, `7.87.0 <https://github.com/curl/curl/releases/tag/curl-7_87_0>`__, 2022-12-21, `cpe:2.3:a:haxx:libcurl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ahaxx%3Alibcurl%3A%2A&search_type=all>`__, `curl <https://github.com/curl/curl/blob/curl-7_87_0/COPYING>`__


envoy.tracers.datadog
---------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Datadog OpenTracing C++ Client <https://github.com/DataDog/dd-opentracing-cpp>`__, `1.2.1 <https://github.com/DataDog/dd-opentracing-cpp/releases/tag/v1.2.1>`__, 2021-01-27, , `Apache-2.0 <https://github.com/DataDog/dd-opentracing-cpp/blob/v1.2.1/LICENSE>`__
  `msgpack for C/C++ <https://github.com/msgpack/msgpack-c>`__, `3.3.0 <https://github.com/msgpack/msgpack-c/releases/tag/cpp-3.3.0>`__, 2020-06-05, , `Boost <https://github.com/msgpack/msgpack-c/blob/cpp-3.3.0/LICENSE_1_0.txt>`__
  `OpenTracing <https://opentracing.io>`__, `1.5.1 <https://github.com/opentracing/opentracing-cpp/releases/tag/v1.5.1>`__, 2019-01-16, , `Apache-2.0 <https://github.com/opentracing/opentracing-cpp/blob/v1.5.1/LICENSE>`__


envoy.tracers.dynamic_ot
------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `OpenTracing <https://opentracing.io>`__, `1.5.1 <https://github.com/opentracing/opentracing-cpp/releases/tag/v1.5.1>`__, 2019-01-16, , `Apache-2.0 <https://github.com/opentracing/opentracing-cpp/blob/v1.5.1/LICENSE>`__


envoy.tracers.opencensus
------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `curl <https://curl.haxx.se>`__, `7.87.0 <https://github.com/curl/curl/releases/tag/curl-7_87_0>`__, 2022-12-21, `cpe:2.3:a:haxx:libcurl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ahaxx%3Alibcurl%3A%2A&search_type=all>`__, `curl <https://github.com/curl/curl/blob/curl-7_87_0/COPYING>`__
  `OpenCensus C++ <https://github.com/census-instrumentation/opencensus-cpp>`__, `f68a2d0 <https://github.com/census-instrumentation/opencensus-cpp/tree/f68a2d0ea43eb61a4b7889f09987294c4f94d436>`__, 2022-09-20, , `Apache-2.0 <https://github.com/census-instrumentation/opencensus-cpp/blob/f68a2d0ea43eb61a4b7889f09987294c4f94d436/LICENSE>`__
  `RapidJSON <https://rapidjson.org>`__, `dfbe1db <https://github.com/Tencent/rapidjson/tree/dfbe1db9da455552f7a9ad5d2aea17dd9d832ac1>`__, 2019-12-03, `cpe:2.3:a:tencent:rapidjson:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Atencent%3Arapidjson%3A%2A&search_type=all>`__, `RapidJSON <https://github.com/Tencent/rapidjson/blob/dfbe1db9da455552f7a9ad5d2aea17dd9d832ac1/license.txt>`__


envoy.tracers.skywalking
------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `cpp2sky <https://github.com/SkyAPM/cpp2sky>`__, `0.4.0 <https://github.com/SkyAPM/cpp2sky/releases/tag/v0.4.0>`__, 2022-03-28, , `Apache-2.0 <https://github.com/SkyAPM/cpp2sky/blob/v0.4.0/LICENSE>`__
  `skywalking-data-collect-protocol <https://github.com/apache/skywalking-data-collect-protocol>`__, `8.9.1 <https://github.com/apache/skywalking-data-collect-protocol/releases/tag/v8.9.1>`__, 2021-12-11, `cpe:2.3:a:apache:skywalking:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aapache%3Askywalking%3A%2A&search_type=all>`__, Apache-2.0


envoy.tracers.zipkin
--------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `RapidJSON <https://rapidjson.org>`__, `dfbe1db <https://github.com/Tencent/rapidjson/tree/dfbe1db9da455552f7a9ad5d2aea17dd9d832ac1>`__, 2019-12-03, `cpe:2.3:a:tencent:rapidjson:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Atencent%3Arapidjson%3A%2A&search_type=all>`__, `RapidJSON <https://github.com/Tencent/rapidjson/blob/dfbe1db9da455552f7a9ad5d2aea17dd9d832ac1/license.txt>`__

